--- a/docs/professor/alex_soares_de_brito.mdx
+++ b/docs/professor/alex_soares_de_brito.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Joaquim José Honório de Lima (Pós)",
+  title: "Alex Soares de Brito",
   base: "",
   weekClasses: [
     {
@@ -14,25 +14,25 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Gestão de materiais e patrimônio",
-          size: 4,
+          subject: "Física I",
+          size: 2,
           teachers: [
-            "Joaquim José Honório de Lima (Pós)"
+            "Alex Soares de Brito"
           ],
-          classroom: "",
+          classroom: "Laboratório de Física",
           students: [
-            "EGE2024 - Modulo 3"
+            "IIW2024A"
           ],
-          time: "19:00 - 19:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -99,7 +99,7 @@ export const data = {
   ]
 }
 
-# Joaquim José Honório de Lima (Pós)
+# Alex Soares de Brito
 
 <div>
   {
