--- a/docs/professor/jael_dos_santos.mdx
+++ b/docs/professor/jael_dos_santos.mdx
@@ -10,19 +10,87 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História III",
+          size: 2,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
+        },
         {
           subject: "Trabalho de conclusão de curso I",
           size: 2,
