--- a/docs/professor/leandro_luiz_borges.mdx
+++ b/docs/professor/leandro_luiz_borges.mdx
@@ -14,11 +14,20 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
         {
           subject: "Prática profissional (estágio obrigatório) e escrita de relatório",
           size: 3,
@@ -33,6 +42,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
