--- a/docs/professor/yohana_diel_saheli.mdx
+++ b/docs/professor/yohana_diel_saheli.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Amilcar Machado Profeta Filho",
+  title: "Yohana Diel Saheli",
   base: "",
   weekClasses: [
     {
@@ -14,22 +14,36 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Políticas públicas educacionais brasileiras",
-          size: 4,
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
           teachers: [
-            "Amilcar Machado Profeta Filho"
+            "Yohana Diel Saheli"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
-            "EGE2024 - Modulo 6"
+            "IIW2024A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
@@ -99,7 +113,7 @@ export const data = {
   ]
 }
 
-# Amilcar Machado Profeta Filho
+# Yohana Diel Saheli
 
 <div>
   {
