--- a/docs/sala/bloco_2/sala_16-2.mdx
+++ b/docs/sala/bloco_2/sala_16-2.mdx
@@ -11,6 +11,32 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Fagner Guglielmi Pereira"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Tecnologia de Carnes e Derivados I",
           size: 2,
           teachers: [
@@ -42,40 +68,31 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de Carnes e Derivados I",
-          size: 2,
+          subject: "História I",
+          size: 1,
           teachers: [
-            "Karen Cristina Guedes Silva"
+            "Jael dos Santos"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "IIW2024A"
           ],
-          time: "19:00 - 19:50",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Tecnologia do Pescado, Mel e Ovos",
+          subject: "Filosofia I",
           size: 2,
           teachers: [
-            "Karen Cristina Guedes Silva"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 16-2",
           students: [
-            "TAL2024"
+            "IIW2024A"
           ],
-          time: "21:00 - 21:50",
+          time: "10:15 - 11:05",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Tecnologia de Glicídios e Lipídios",
           size: 2,
@@ -105,32 +122,45 @@ export const data = {
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia do Leite e Derivados",
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Tecnologia do Pescado, Mel e Ovos",
+          size: 2,
+          teachers: [
+            "Karen Cristina Guedes Silva"
           ],
           classroom: "Sala 16-2",
           students: [
             "TAL2024"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Microbiologia dos Alimentos",
-          size: 1,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         },
         {
@@ -143,7 +173,95 @@ export const data = {
           students: [
             "TAL2024"
           ],
+          time: "21:00 - 21:50",
+          color: ""
+        },
+        {
+          subject: "Microbiologia dos Alimentos",
+          size: 1,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
           time: "21:50 - 22:40",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Biologia I",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Fagner Guglielmi Pereira"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Tecnologia de Carnes e Derivados I",
+          size: 2,
+          teachers: [
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Tecnologia do Leite e Derivados",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "TAL2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
