--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/laboratorio_de_informatica_b_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Cesar Augusto Silveira Junior",
-  base: "",
+  title: "Laboratório de Informatica B - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -18,25 +21,25 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão de Pessoas no Setor Público",
-          size: 4,
-          teachers: [
-            "Cesar Augusto Silveira Junior"
-          ],
-          classroom: "",
-          students: [
-            "EGE2024 - Modulo 5"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -99,7 +102,7 @@ export const data = {
   ]
 }
 
-# Cesar Augusto Silveira Junior
+# Laboratório de Informatica B - CR Toledo
 
 <div>
   {
