--- a/docs/sala/bloco_cr_ifpr-biopark/sala_04_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_04_-_cr_toledo.mdx
@@ -1,8 +1,11 @@
+---
+slug: /sala/sala_04_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Mauro César de Souza Siena (Pós)",
-  base: "",
+  title: "Sala 04 - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -18,25 +21,38 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Introdução à Educação à distância",
-          size: 4,
-          teachers: [
-            "Mauro César de Souza Siena (Pós)"
-          ],
-          classroom: "",
-          students: [
-            "EGE2024 - Modulo 1"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 04 - CR Toledo",
+          students: [
+            "IIW2024B - Grupo A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 04 - CR Toledo",
+          students: [
+            "IIW2024B - Grupo B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -99,7 +115,7 @@ export const data = {
   ]
 }
 
-# Mauro César de Souza Siena (Pós)
+# Sala 04 - CR Toledo
 
 <div>
   {
