--- a/docs/professor/joaquim_jose_honorio_de_lima.mdx
+++ b/docs/professor/joaquim_jose_honorio_de_lima.mdx
@@ -6,11 +6,41 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima",
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima",
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -18,21 +48,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão de materiais e patrimônio",
-          size: 4,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "",
-          students: [
-            "EGE2024 - Modulo 3"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
