--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -10,7 +10,21 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Arte I",
+          size: 2,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -18,21 +32,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Projeto Integrador",
-          size: 2,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "",
-          students: [
-            "AGR2023"
-          ],
-          time: "19:50 - 20:40",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
