--- a/docs/professor/lechan_colares_santos.mdx
+++ b/docs/professor/lechan_colares_santos.mdx
@@ -37,6 +37,10 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Introdução a Contabilidade",
@@ -50,25 +54,8 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        },
-        {
-          subject: "Introdução a Contabilidade",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -83,14 +70,28 @@ export const data = {
           students: [
             "TGC2023"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Introdução a Contabilidade",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
