--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -1,12 +1,27 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Francisco Carlos de Meneses Junior",
+  title: "Rafael Luis Bartz",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro",
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -18,25 +33,38 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão ambiental pública e privada",
-          size: 1,
-          teachers: [
-            "Francisco Carlos de Meneses Junior"
-          ],
-          classroom: "",
-          students: [
-            "GCS2023"
-          ],
-          time: "21:50 - 22:40",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -99,7 +127,7 @@ export const data = {
   ]
 }
 
-# Francisco Carlos de Meneses Junior
+# Rafael Luis Bartz
 
 <div>
   {
