--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -42,6 +42,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
           subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
@@ -60,37 +73,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Projetos Elétricos Residenciais e Prediais",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Trabalho de Conclusão de Curso",
-          size: 1,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "19:50 - 20:40",
-          color: ""
-        },
-        {
           subject: "Desenho Assistido por computador",
           size: 2,
           teachers: [
@@ -101,6 +83,24 @@ export const data = {
             "ELM2024"
           ],
           time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Projetos Elétricos Residenciais e Prediais",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
