--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -11,10 +11,50 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Direito do Trabalho",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "José Jurandir Pereira Junior"
+            "Joaquim José Honório de Lima",
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A - Grupo B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A - Grupo A"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "Marketing de Relacionamento",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -24,10 +64,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Marketing de Relacionamento",
+          subject: "Direito do Trabalho",
           size: 2,
           teachers: [
-            "Keyla Christina Almeida Portela"
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -42,41 +82,24 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Introdução a Contabilidade",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Lechan Colares Santos"
+            "Joaquim José Honório de Lima",
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "TGC2024"
+            "IIW2024A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Introdução a Contabilidade",
+          subject: "Estatística aplicada",
           size: 2,
           teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Análise Econômica de Mercado",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
+            "Mauro César de Souza Siena"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -101,13 +124,13 @@ export const data = {
       ]
     },
     {
-      dayName: "Quinta-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Comércio Eletrônico e Mídias Digitais",
+          subject: "Introdução a Contabilidade",
           size: 2,
           teachers: [
-            "Samuel Stephan Milczuk"
+            "Lechan Colares Santos"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -117,10 +140,41 @@ export const data = {
           color: ""
         },
         {
-          subject: "Estatística aplicada",
+          subject: "Análise Econômica de Mercado",
           size: 2,
           teachers: [
-            "Mauro César de Souza Siena"
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Direito do Trabalho",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Comércio Eletrônico e Mídias Digitais",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -135,10 +189,49 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Direito do Trabalho",
+          subject: "Fundamentos de informática",
+          size: 1,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Fundamentos de informática",
+          size: 1,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Projeto integrador I",
           size: 2,
           teachers: [
-            "José Jurandir Pereira Junior"
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Introdução a Contabilidade",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
