--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -24,7 +24,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -42,23 +42,23 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Programação Orientada a Objetos",
+          subject: "Elaboração de Projetos",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TADS_ESP"
+            "TGC2023"
           ],
           time: "19:00 - 19:50",
           color: ""
         },
         {
-          subject: "Gestão da qualidade",
+          subject: "Gestão da Sustentabilidade",
           size: 2,
           teachers: [
-            "Haroldo Yutaka Misunaga"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
@@ -82,7 +82,7 @@ export const data = {
           students: [
             "TGC2023"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -90,19 +90,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Elaboração de Projetos",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
         {
           subject: "Administração financeira e orçamentária",
           size: 2,
@@ -113,7 +100,20 @@ export const data = {
           students: [
             "TGC2023"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Trabalho de Conclusão de Curso",
+          size: 1,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:50 - 22:40",
           color: ""
         }
       ]
@@ -135,10 +135,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da Sustentabilidade",
+          subject: "Gestão da qualidade",
           size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Haroldo Yutaka Misunaga"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
