--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -17,9 +17,14 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
         {
           subject: "Geografia I",
           size: 1,
@@ -30,14 +35,10 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "15:55 - 16:45",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -52,9 +53,14 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
         {
           subject: "Geografia I",
           size: 1,
@@ -69,10 +75,6 @@ export const data = {
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
