--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -11,7 +11,7 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação",
+          subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -55,8 +55,8 @@ export const data = {
           color: ""
         },
         {
-          subject: "Programação Orientada a Objetos",
-          size: 2,
+          subject: "Trabalho de Conclusão de Curso",
+          size: 1,
           teachers: [
             "Douglas Barbosa Sousa"
           ],
