--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -24,14 +24,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Programação Orientada a Objetos",
+          subject: "Gestão da Sustentabilidade",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "TADS_ESP"
+            "TGC2023"
           ],
           time: "21:00 - 21:50",
           color: ""
@@ -55,10 +55,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da Sustentabilidade",
+          subject: "Gestão da qualidade",
           size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Haroldo Yutaka Misunaga"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
@@ -73,24 +73,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Design de loja, visual merchandising e franchising",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Administração financeira e orçamentária",
           size: 2,
           teachers: [
@@ -102,10 +84,15 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
         {
-          subject: "Trabalho de Conclusão de Curso",
-          size: 1,
+          subject: "Programação Orientada a Objetos",
+          size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
           ],
@@ -113,7 +100,20 @@ export const data = {
           students: [
             "TADS_ESP"
           ],
-          time: "21:50 - 22:40",
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Linguagem de Programação",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -135,10 +135,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da qualidade",
+          subject: "Design de loja, visual merchandising e franchising",
           size: 2,
           teachers: [
-            "Haroldo Yutaka Misunaga"
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
