--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -17,6 +17,19 @@ export const data = {
           students: [
             "TGC2024"
           ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Direito do Trabalho",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
           time: "21:00 - 21:50",
           color: ""
         }
@@ -32,21 +45,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Direito do Trabalho",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
